<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_top_3" >

        <EditText
            android:id="@+id/cahnge_new_pass_edittxt"
            style="@style/LoginEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/change_new_password"
            android:inputType="textPassword"
            android:textColorHint="@color/drak_gray" >
        </EditText>

        <EditText
            android:id="@+id/change_confirm_pass_edittxt"
            style="@style/LoginEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/change_confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/drak_gray" >
        </EditText>

        <com.android.handy.view.TextViewPlus
            android:id="@+id/updatePassButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_1"
            android:text="@string/change_update_password"
            android:textColor="@color/white"
            app:customFont="@string/font_medium" />
    </LinearLayout>

</LinearLayout>