<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_partner_xxxhdpi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_top_10"
            android:background="@drawable/login_box"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/mobileEditText"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_top_3"
                android:layout_marginRight="@dimen/margin_top_10"
                android:layout_marginTop="@dimen/margin_top_10"
                android:hint="@string/login_mobile_no"
                android:inputType="number"
                android:maxLength="10" />

            <EditText
                android:id="@+id/passwordEditText"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_top_3"
                android:layout_marginRight="@dimen/margin_top_10"
                android:layout_marginTop="@dimen/margin_top_0"
                android:hint="@string/login_password"
                android:imeOptions="actionGo"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_2"
                android:gravity="center|center_vertical"
                android:orientation="horizontal"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_top"
                    android:src="@drawable/username"
                    android:visibility="gone" />

                <EditText
                    style="@style/LoginEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_top_3"
                    android:layout_marginRight="@dimen/margin_top_10"
                    android:hint="@string/login_mobile_no"
                    android:inputType="phone" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center|center_vertical"
                android:orientation="horizontal"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_top"
                    android:src="@drawable/password"
                    android:visibility="gone" />

                <EditText
                    style="@style/LoginEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_top_3"
                    android:layout_marginRight="@dimen/margin_top_10"
                    android:hint="@string/login_password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword" >
                </EditText>
            </LinearLayout>

            <com.android.handy.view.TextViewPlus
                android:id="@+id/loginButton"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_top_10"
                android:layout_marginRight="4dp"
                android:layout_marginTop="@dimen/header_text_size"
                android:text="@string/login"
                android:textColor="@color/white"
                app:customFont="@string/font_medium" />
        </LinearLayout>
    </LinearLayout>

    <com.android.handy.view.TextViewPlus
        android:id="@+id/forgotTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_top_10"
        android:text="@string/forgot_password"
        android:textColor="@color/drak_green"
        android:layout_marginTop="@dimen/margin_top_10"
        android:textSize="@dimen/margin_top_1"
        app:customFont="@string/font_medium" />

</LinearLayout>